crates/syncable-state-derive/tests/ui/duplicate_id.stderr
error: duplicate #[sync(id)] fields: `first_id` and `second_id`
 --> tests/ui/duplicate_id.rs:8:5
  |
8 |     second_id: String,
  |     ^^^^^^^^^
